--- a/index.html
+++ b/index.html
@@ -13,6 +13,55 @@
     <script src="app.js" async defer></script>
 
 
-    
+    <!-- TOP PART ---------------------------------------------------->
+
+    <!-- top row 1 (carousel text)-->
+    <!-- top row 2 (coach / coachtopia)-->
+    <!-- top row 3 (main nav bar)-->
+    <!-- top row 4 (store sections - sale, pride, tabby, etc)-->
+    <!-- divider element -->
+    <!-- row: where am I? -->
+    <!-- h1 element: gifts -->
+    <!-- top section: endless gift options-->
+
+
+
+    <!-- MAIN PART (flex)---------------------------------------------->
+
+    <!--left side: menu for categories-->
+      <!--top: filter by / clear all -->
+      <!--underneath: drop down menus (categories, etc)-->
+
+    <!-- right side: main content-->
+      <!--top: # of products / sort by-->
+      <!--underneath: products-->
+        <!--product-->
+          <!-- image with heart-->
+          <!--product name-->
+          <!--price (potentially w/ extra info)-->
+          <!--color selections-->
+          <!-- stars & # of reviews-->
+          <!--upon hovering: popup box w/ specific item color-->
+          <!--upon hovering: quick view button on bottom of pic-->
+            <!--upon hovering over quick view: button color change-->
+        <!--product-->
+        <!--product-->
+        <!--ETC-->
+
+
+
+    <!--BOTTOM PART---------------------------------------------------->
+
+    <!--search box (looooooooooong)-->
+
+    <!--big bottom box -->
+
+      <!--left side (ca 70%): link collection (flex)-->
+      <!--right side: social media etc-->
+      <!--divider-->
+      <!-- underneath: usual blah links (flex)-->
+      <!-- underneath: copyright blah-->
+
+
   </body>
 </html>
