left part of main container mostly done

--- a/index.html
+++ b/index.html
@@ -65,17 +65,73 @@
       <div class="mainContainerLeft">
 
         <!--top: filter by / clear all -->
-        <div class="filterHeader">FILTER BY
-          <input type="button" value="CLEAR ALL">
+        <div class="filterHeader">
+          <div class="filterHeaderText">FILTER BY</div>
+          <input type="button" class="filterHeaderButton" value="CLEAR ALL">
         </div>
 
         <!--underneath: drop down menus (categories, etc)-->
         <div class="filterOptions">
-          <div class="filterOption"></div>
-          <div class="filterOption"></div>
-          <div class="filterOption"></div>
-          <div class="filterOption"></div>
-          <div class="filterOption"></div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">CATEGORIES</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">BAG CATEGORIES</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">GENDER</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">COLOR</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">PRICE</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">PERCENT OFF</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">SIZE</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">MATERIAL</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">SUSTAINABLE MATERIALS</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">BAG SIZE</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">GIFTS BY RECIPIENT</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
+
+          <div class="filterOption">
+            <div class="filterOptionText">LIFESTYLE AND OBJECTS</div>
+            <img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/angle-down-512.png">
+          </div>
         </div>
 
       </div> <!--end of left part of the main container-->
