fiddled around w/ some details

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- top row 4 (store sections - sale, pride, tabby, etc)-->
     <!-- divider element -->
 
+    <div class="topTopContainer"></div>
+
 
 
     <!--TOP CONTAINER-------------------------------------------------->
