a few details missing

--- a/index.html
+++ b/index.html
@@ -158,23 +158,39 @@
           <div class="productRow">
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/c3766_lhvsp_a0?$desktopProductTile$">
+              <div class="productDetails">
+                <div class="productName">Willow Bucket Bag</div>
+                <div class="price">$210 - $350</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/ci402_vmi_a0?$desktopProductTile$">
+              <div class="productDetails">
+                <div class="productName">Summer Crewneck Sweater</div>
+                <div class="price">$395</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cj835_lhu8u_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Camila Bucket Bag</div>
+                <div class="price">$395</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/ci395_wht_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Denim Short Sleeve Dress</div>
+                <div class="price">$495</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
           </div> <!--end of product row 1-->
@@ -184,26 +200,42 @@
           <div class="productRow">
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cj370_vs6_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Floral V Neck Dress</div>
+                <div class="price">$395</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cj827_b4ha_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Dakota Bucket Bag 16</div>
+                <div class="price">$395</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cl644_vq5_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Cropped Signature Jacquard</div>
+                <div class="price">$495</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cj846_b4ha_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Tabby Messenger 19</div>
+                <div class="price">$395</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
             
-          </div> <!--end of product row 3-->
+          </div> <!--end of product row 2-->
 
 
 
@@ -211,26 +243,42 @@
           <div class="productRow">
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cl645_vq5_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Signature Denim Shorts</div>
+                <div class="price">$350</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cj621_wht_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Cropped Denim Jacket</div>
+                <div class="price">$450</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/ci453_l38_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Dreams Eau De Parfum</div>
+                <div class="price">$115</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
 
             <div class="productBox">
-              <img src="">
-              <div class="productDetails"></div>
+              <img src="https://images.coach.com/is/image/Coach/cl596_gdpk_a0?$quickViewProduct$">
+              <div class="productDetails">
+                <div class="productName">Classic Pearl Layered Necklace</div>
+                <div class="price">$125</div>
+                <div class="rating">RATING</div>
+              </div>
             </div>
             
-          </div> <!--end of product row 2-->
+          </div> <!--end of product row 3-->
 
 
 
