--- a/index.html
+++ b/index.html
@@ -23,7 +23,61 @@
     <!-- top row 4 (store sections - sale, pride, tabby, etc)-->
     <!-- divider element -->
 
-    <div class="topTopContainer"></div>
+    <!-- <div class="topTopContainer"> -->
+    <div class="topTopContainer">
+      <!-- Shehroze Start-->
+
+      <div class="navbar-container">
+        <div class="navbar-top-sec">
+          <p class="top-sec-txt">EXCLUSIVE INSIDER ACCESS: 60+ NEW COACH (RE)LOVED STYLES. <SPAn class="shop-now">SHOP NOW</SPAn></p>
+        </div>
+      <!-- navbar 2nd-sec -->
+      <div class="navbar-2nd-sec">
+        <div class="coach"> <STRONG>COACH</STRONG></div>
+        <div class="coach"><STROng>COACHTOPIA</STROng></div>
+      </div>
+      <!-- navbar 3rd-sec -->
+      <div class="navbar-3rd-sec">
+        <div class="div1">
+          <img src="https://img.icons8.com/?size=512&id=YTyvOb1dPj7U&format=png" alt="" class="usa-flag">
+          <p class="usa">US</p>
+          <img src="https://img.icons8.com/?size=512&id=99977&format=png" alt="" class="drop-down-btn">
+          <img src="https://img.icons8.com/?size=512&id=3723&format=png" alt="" class="location-icon">
+          <p class="stores">Stores</p>
+          <p class="recorded">&#x2022RECORDED</p>
+          <p class="events">EVENTS</p>
+        </div>
+        <div class="div2">
+          <H1>COACH</H1>
+        </div>
+        <div class="div3">
+          <input type="text" placeholder="Search Honest" class="search-input-field">
+          <img src="https://img.icons8.com/?size=512&id=132&format=png" alt="" class="search-icon-img">
+          <img src="https://thenounproject.com/api/private/icons/3386813/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0" alt="" class="wishlist-icon">
+          <img src="https://img.icons8.com/?size=512&id=23264&format=png" alt="" class="user-icon">
+          <img src="https://img.icons8.com/?size=512&id=3686&format=png" alt="" class="bag-icon">
+        </div>
+      </div>
+      <div class="navbar-4th-section">
+          <p class="4th-sec-categories" id="sale">SALE</p>
+          <p class="4th-sec-categories" id="pride"><strong>PRIDE</strong></p>
+          <p class="4th-sec-categories">TABBY</p>
+          <p class="4th-sec-categories">NEW</p>
+          <p class="4th-sec-categories">WOMEN</p>
+          <p class="4th-sec-categories">MEN</p>
+          <p class="4th-sec-categories">BAGS</p>
+          <p class="4th-sec-categories">SHOP BY</p>
+          <p class="4th-sec-categories">COACH INSIDER</p>
+          <p class="4th-sec-categories">COACH (RE)LOVED</p>
+          <p class="4th-sec-categories">GIFTS</p>
+      </div>
+      </div>
+
+
+      <!-- Shehroze End-->
+    </div>
+
+    
 
 
 
